# piskle-py

./: README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/: main.py
src/piskle/: main.py
src/piskle/views/: __init__.py  ui_main.py
src/views/: __init__.py  ui_main.py
tests/: test_ui.py
views/: __init__.py  ui_main.py
