[metadata]
name = piskle
description = Piskle-py app
author = Wysciguvvka
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = piskle
install_requires =
    PySide6==6.3.1
python_requires = >=3.10
zip_safe = no
package_dir =
    =src

[options.package_data]
slapping = py.typed

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=3.0
    tox>=3.25
    pytest-qt>=4.1.0

[flake8]
max-line-length = 120